--- a/app/index.jade
+++ b/app/index.jade
@@ -2,9 +2,8 @@ include mixins
 extends layout
 
 block body
-  
-  .container    
-    div(ui-view="")
+      
+  div(ui-view="")
 
   script(src='/bower_components/jquery/dist/jquery.min.js')
   script(src='/bower_components/angular/angular.js')
@@ -12,6 +11,8 @@ block body
   script(src='/bower_components/angular-resource/angular-resource.js')
   script(src='/bower_components/angular-ui-router/release/angular-ui-router.js')
   script(src='/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js')
+  script(src='/bower_components/angular-scroll/angular-scroll.min.js')
+  script(src='/bower_components/ng-parallax/angular-parallax.min.js')
   script(src='/js/app.js')
 
 
