--- a/app/layout.jade
+++ b/app/layout.jade
@@ -10,7 +10,7 @@ html(ng-app="myApp")
     base(href='/')
     title TK APP SERIES
     link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
-    +bootswatch("flatly")
+    +bootswatch("cosmo")
     link(rel='stylesheet', href='/bower_components/font-awesome/css/font-awesome.css')    
     link(rel='stylesheet', href='/css/styles.css')
   body
@@ -21,7 +21,7 @@ html(ng-app="myApp")
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        a.navbar-brand(href='#') TK APP
+        a.navbar-brand(href='#/') TK APP
       #bs-example-navbar-collapse-1.collapse.navbar-collapse
         ul.nav.navbar-nav
           li(ng-class="{active: isActive('/posts')}")
