--- a/app/css/styles.scss
+++ b/app/css/styles.scss
@@ -2,6 +2,79 @@
   width: $percentage;
 }
 
+@mixin home-button-wrapper($color, $bgColor){
+  box-sizing: border-box;
+  display: inline-block;
+  min-width: 188px;
+  padding: 5px;
+  margin: 15px 10px 0px 10px;
+  border: 4px solid $color;
+  border-radius: 2em;
+  box-shadow: inset 1px 2px 3px 0 rgba(0,0,0,.2),1px 2px 3px 0 rgba(0,0,0,.2);
+  background: $bgColor;
+  color: $color;
+  text-shadow: 0 1px 3px rgba(59,37,4,.66);
+  text-transform: uppercase;
+  font-size: large;
+  &:hover {
+    cursor: pointer;
+    background: lighten($bgColor,40%);
+  }
+}
+
 .tk-full-w {
-  @include set-width(100%)
+  @include set-width(100%);
+}
+
+.tk-main-button-1 {
+  @include home-button-wrapper(white, rgba(136, 134, 134, 0.38));
+  .inner {
+    text-shadow: none;
+  }
+}
+.tk-main-button-2 {
+  @include home-button-wrapper(royalblue,rgba(136, 134, 134, 0.38));
+  .inner {
+    text-shadow: none;
+  }
+}
+.form-wrapper {
+  margin: 0 20px;
+}
+.main-header-box{
+  text-align: center
+}
+.hero {
+  color: white;
+  overflow: hidden;
+  position: relative;
+  height: 400px;
+  background: center top/cover no-repeat #45474D;
+  text-align: center;
+  h1 {
+    padding-top: 70px;
+  }
+  .inner-text-box {
+    width:60%;
+    margin:0 auto;
+    padding-top:30px;
+  }
+  &.hero-1 {
+    background-image: url(/img/bg.jpg);
+  }
+  &.content {
+    position: relative;
+    z-index: 1;
+    max-width: 500px;
+    height: 100%;
+    padding-top: 1px;
+    margin: auto;
+    -webkit-transition: .75s;
+    transition: .75s;
+    -webkit-transition-property: opacity,visibility;
+    transition-property: opacity,visibility;
+  }
+  &.first {
+    margin-top: -21px;
+  }
 }
