reverse post order and singleView css change

--- a/app/modules/blog/views/blogSingle.jade
+++ b/app/modules/blog/views/blogSingle.jade
@@ -1,5 +1,7 @@
 .well
-  h2 {{post.title}}
-  p {{post.text}}
+  .text-center
+    h1 {{post.title}}
+  .context-box 
+    p {{post.text}}
   p {{post.slug}}
   button.btn.btn-primary(ui-sref="postAll") Back 
