--- a/app/modules/admin/views/adminAllPost.jade
+++ b/app/modules/admin/views/adminAllPost.jade
@@ -5,7 +5,7 @@
       p Synchronizing Admin Contents.....
   
   table.table.table-hover
-    tr(ng-repeat="post in posts")
+    tr(ng-repeat="post in posts | orderBy:'_id':true")
       td.col-xs-8 {{post.title}}
       td.col-xs-4
         a(ui-sref="admin.postUpdate({id:post._id})").btn.btn-primary Edit
